--- a/BlockchainToSql/BlockchainToSql.csproj
+++ b/BlockchainToSql/BlockchainToSql.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,10 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BlockchainToSql</RootNamespace>
     <AssemblyName>BlockchainToSql</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -44,57 +45,11 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Blockchain.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Blockchain.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Blockchain.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Blockchain.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Blockchain.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Blockchain.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="blocks.cs">
-      <DependentUpon>Blockchain.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Inputs.cs">
-      <DependentUpon>Blockchain.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Outputs.cs">
-      <DependentUpon>Blockchain.tt</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transactions.cs">
-      <DependentUpon>Blockchain.tt</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <EntityDeploy Include="Blockchain.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Blockchain.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="Blockchain.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Blockchain.edmx</DependentUpon>
-      <LastGenOutput>Blockchain.Context.cs</LastGenOutput>
-    </None>
-    <None Include="Blockchain.edmx.diagram">
-      <DependentUpon>Blockchain.edmx</DependentUpon>
-    </None>
-    <None Include="Blockchain.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Blockchain.edmx</DependentUpon>
-      <LastGenOutput>Blockchain.cs</LastGenOutput>
-    </None>
-    <Content Include="Blockchain.edmx.sql" />
-    <Content Include="db.sql" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
