--- a/BlockchainToSql/BlockchainToSql.csproj
+++ b/BlockchainToSql/BlockchainToSql.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlockchainProcessor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
