--- a/BlockchainParser/BlockchainParser.csproj
+++ b/BlockchainParser/BlockchainParser.csproj
@@ -8,4 +8,8 @@
     <Folder Include="Properties\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Microsoft.NETCore.App" Version="2.0.0" />
+  </ItemGroup>
+
 </Project>
