--- a/BlockchainToSql/BlockchainToSql.csproj
+++ b/BlockchainToSql/BlockchainToSql.csproj
@@ -7,6 +7,7 @@
     <StartupObject />
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
