--- a/BlockchainParser/BlockchainParser.csproj
+++ b/BlockchainParser/BlockchainParser.csproj
@@ -9,4 +9,8 @@
     <Folder Include="Properties\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.ValueTuple" Version="4.4.0" />
+  </ItemGroup>
+
 </Project>
